@@ -77,6 +77,7 @@ public class DefaultQueryHandler implements QueryHandler {
 	protected static String STATEMENT_SELECT_CATEGORY_TOPICS = null;
 	protected static String STATEMENT_SELECT_RECENT_CHANGES = null;
 	protected static String STATEMENT_SELECT_TOPIC = null;
+	protected static String STATEMENT_SELECT_TOPIC_DELETE_OK = null;
 	protected static String STATEMENT_SELECT_TOPIC_BY_TYPE = null;
 	protected static String STATEMENT_SELECT_TOPICS = null;
 	protected static String STATEMENT_SELECT_TOPIC_SEQUENCE = null;
@@ -309,6 +310,7 @@ public class DefaultQueryHandler implements QueryHandler {
 		STATEMENT_SELECT_CATEGORY_TOPICS         = props.getProperty("STATEMENT_SELECT_CATEGORY_TOPICS");
 		STATEMENT_SELECT_RECENT_CHANGES          = props.getProperty("STATEMENT_SELECT_RECENT_CHANGES");
 		STATEMENT_SELECT_TOPIC                   = props.getProperty("STATEMENT_SELECT_TOPIC");
+		STATEMENT_SELECT_TOPIC_DELETE_OK         = props.getProperty("STATEMENT_SELECT_TOPIC_DELETE_OK");
 		STATEMENT_SELECT_TOPIC_BY_TYPE           = props.getProperty("STATEMENT_SELECT_TOPIC_BY_TYPE");
 		STATEMENT_SELECT_TOPICS                  = props.getProperty("STATEMENT_SELECT_TOPICS");
 		STATEMENT_SELECT_TOPIC_SEQUENCE          = props.getProperty("STATEMENT_SELECT_TOPIC_SEQUENCE");
@@ -538,8 +540,13 @@ public class DefaultQueryHandler implements QueryHandler {
 	/**
 	 *
 	 */
-	public WikiResultSet lookupTopic(int virtualWikiId, String topicName) throws Exception {
-		WikiPreparedStatement stmt = new WikiPreparedStatement(STATEMENT_SELECT_TOPIC);
+	public WikiResultSet lookupTopic(int virtualWikiId, String topicName, boolean deleteOK) throws Exception {
+		WikiPreparedStatement stmt = null;
+		if (!deleteOK) {
+			stmt = new WikiPreparedStatement(STATEMENT_SELECT_TOPIC);
+		} else {
+			stmt = new WikiPreparedStatement(STATEMENT_SELECT_TOPIC_DELETE_OK);
+		}
 		stmt.setInt(1, virtualWikiId);
 		stmt.setString(2, topicName);
 		return stmt.executeQuery();
@@ -548,8 +555,13 @@ public class DefaultQueryHandler implements QueryHandler {
 	/**
 	 *
 	 */
-	public WikiResultSet lookupTopic(int virtualWikiId, String topicName, Connection conn) throws Exception {
-		WikiPreparedStatement stmt = new WikiPreparedStatement(STATEMENT_SELECT_TOPIC);
+	public WikiResultSet lookupTopic(int virtualWikiId, String topicName, boolean deleteOK, Connection conn) throws Exception {
+		WikiPreparedStatement stmt = null;
+		if (!deleteOK) {
+			stmt = new WikiPreparedStatement(STATEMENT_SELECT_TOPIC);
+		} else {
+			stmt = new WikiPreparedStatement(STATEMENT_SELECT_TOPIC_DELETE_OK);
+		}
 		stmt.setInt(1, virtualWikiId);
 		stmt.setString(2, topicName);
 		return stmt.executeQuery(conn);
