@@ -269,6 +269,10 @@ STATEMENT_SELECT_TOPIC = \
     where virtual_wiki_id = ? \
     and delete_date is null \
     and topic_name = ? 
+STATEMENT_SELECT_TOPIC_DELETE_OK = \
+    select * from jam_topic \
+    where virtual_wiki_id = ? \
+    and topic_name = ? 
 STATEMENT_SELECT_TOPIC_BY_TYPE = \
     select topic_name from jam_topic \
     where virtual_wiki_id = ? \
